--- a/k8s.yml
+++ b/k8s.yml
@@ -1,40 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello
+  name: v2ray
 spec:
   selector:
     matchLabels:
-      app: hello
-      tier: backend
-      track: stable
+      app: v2ray
   replicas: 1
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
-        app: hello
-        tier: backend
-        track: stable
+        app: v2ray
     spec:
       containers:
-        - name: hello
-          image: "jaskon139/oktetofortest"
+        - name: v2ray
+          image: jaskon139/kubesail:latest
+          imagePullPolicy: Always
+          resources:
+            requests:
+              cpu: 5m
+              memory: 64Mi
+            limits:
+              cpu: 100m
+              memory: 256Mi
           ports:
-            - name: http
-              containerPort: 80
-
---- 
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello
-spec:
-  selector:
-    app: hello
-    tier: backend
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: http
+            - containerPort: 8080
+          env:
+            - name: CONFIG_JSON
+              value: '{"inbounds":[{"port":8080,"protocol":"vmess","settings":{"clients":[{"id":"852217f3-b83d-412e-b8b7-93706a6dd4e9","alterId":64}]},"streamSettings":{"network":"ws","wsSettings":{"path":"/ws"}}}],"outbounds":[{"protocol":"freedom","settings":{}}]}'
