--- a/k8s.yml
+++ b/k8s.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: v2ray
-          image: jaskon139/kubesail:latest
+          image: jaskon139/kubesail2:latest
           imagePullPolicy: Always
           resources:
             requests:
